Cambiar diseño del Boton y centrarlo.

--- a/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/Login/Form_Login.resx
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/Login/Form_Login.resx
@@ -467,6 +467,59 @@
         CBk6MJAQQgghZOjAQEIIIYSQoQMDCSGEEEKGDgwkhBBCCBk27iH/FzYYI7MvXhytAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="btn_Acceder.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAM4AAAA6CAYAAAD4HGbLAAAAIGNIUk0AAHolAACAgwAA+f8AAIDpAAB1
+        MAAA6mAAADqYAAAXb5JfxUYAAAAJcEhZcwAADsQAAA7EAZUrDhsAAArrSURBVHhe7d3Paxz3HcZxnQKp
+        Lcn/QXrIoVByyL299J5rKTkZgilpD4ZiQghGoJpgQtpigmuCMRjXBGFUhHEbWbYsu8n/ld0+n9n5jj7f
+        zzwz8/253lX28KLy7MxK7DxvZMmKujX78Ree+Q/M5WSz/10S78MH8Bv4qD0mrsJ1+AL24fMJcl5ruzN/
+        k+n15SXbifMKH2NNp3gfGWYvcR9GzKe82A21BzfhX/A3+BDen5/sbCWbz5PUCmcb4/4duEBk7PfgMczz
+        bXsw/jyvLy/ZTpxX+BhrOsX7yIA4RiGOcS92h53gfbDjmpxzsnMfHsA/4WPgoXSuLJAoQpQM59fq7U8x
+        8Ltw5A++FNyQNQlndnaJHMeNjsHGXsjsFB8PiSEGi0WjsWgsBrEIgj+mufN8B3AK+2CiWY1wfqnevg0P
+        +dhLwc1Yk3AkmlUOR6JZ2XB0BOxxTZ/LHcM98KPJCScgjCEfqbe/hUOYCz74dHTsEWhgvTGX5aJZhIOb
+        F+MMyNCTkbGLbtjkMQ95nqAgQk3FwB734DUX7vn0tY0r2uMmmLcQzgfq7QfwDJpgHDb+HN7gE2zCwfMR
+        UeGYYysbjvxZX9vwwhE/Ar4eWk44l9Tbf4L/gheMw8afwxt8gk04eD4iOBxiJcMR+rpOLxzne9hnYUxB
+        BEHh6C/8/wE0GMGGn8sbfIJeOGTopWWFw8afgwxfpIbTXVeKDcEO3z7eg9fcXuOh0Wj3WRxjEMJkOFfV
+        2/+GpcSi6QhSeOGQkdcUG87sDB8jG38OMn6REo67pgtHhuveTqUjYMPXjzPsGg+NxXoGwZ99EMNgOO/A
+        J+rPD6EXjWBjj/Nuyx5Xg8/QPQ8Z9nLg5gWQaFY5HB3N7KUarjxHDjp2RUcyhF3XoaEwR/A5C8XawmB1
+        LNpv1ds0GKc/+DiIF/+7CadWOP7gz7E4xvjXq9HKc+WgY1d0IEPYdQ0ayJigzzxD4Xyo3j6AXixaf/Bx
+        NuEsrE84u41utPJcOejgFR3IEHYdDyPEwez57g0WjKNjcX6l3j6CXihOf+hp5oim8Ua+nnHwgpZCx1zA
+        Was7hptFNDGQ4x0y9qJIBFrzj6Bj57OxR+iFZsduj1teDKFoENxz4xjv83j3EL5k0QgdjHhPvf0YaDAO
+        iyBFP5pNOEXZEAwvHPI4iyHGmoYjHsDVkHCc+0BjcVgAqfrRCLzopeixl5QZTq2/mvWwGJShcLq/0mVa
+        q3DOo3GehIZzDWgsGgsgVdVohB57SRcpHHa8GT2uz7Tm4Yi9kHCeAo1FsOHnqhKNHngtgeEwLppVCIdx
+        0fyswmHRLI6fTIXzlcQxhg0/Fx1+Dj3umjbhBLkA4YhHY+H0fmBTY6MvgY4/hx53TYnh6GhWMRwdTTP4
+        NoBUP73YafTGzSJh7HVB2ihC2Fg0HdRAOJ+5QIaw0ZdAx59Dj7umCx9O+5lCRZDiwoRzvPstC+eJC8Ri
+        Yy+Jjj+HHnemxc+a2eO4MTHkp50dNuxcZPyewPP8zzTnWAyaC6yJjI3eHrN6ozfXsMc9JoQpY381G3fE
+        wqHRCDb2kuj4U/VGnqdoOHrsJZEIPIHnsWgEi0WrEo6YeryjogiRHo74VIdzR4disbGXRANI1Rt5nmLh
+        6KGXRiLwBJ7HohEsFq1aOGLq8YaKIkReON/pcJbyozUcXnwWQKzeuGvCzYqhR14DicATcB4LxmGxaIPh
+        uGHrY4wXQSwVRKj0aMSxDmfJsQi84O6HL1kIMei4a8INi6FHXgMJwTNxHotFY7FobyccE0MMHkS4oXD4
+        0EvCi70Jp4ig31LjzmePAYtFY7FovXDsyG0ojL1mFIkh0Ow53heLIc4fN+EQ8nUN/9rGwc2LoYZekkSz
+        cuGwobNQGHYtxaMIUSic/bcQDl7oTTjZXDQXKhzBrvfwIEIVCudrieZW7XDo2HPQMZfl4lkEhBsWqsa3
+        nsnYs8no3VhNCNH08FN0z4PXvkIsZPi5DiWcvZrRCDr+HGToNWzCCaQjSOGeh0YjSAwx+PhzfCfhXN+E
+        MywpHDb+HGz4Gbq/ftnhptIRpJDnoME4JIYYfPw57nZf47DBl0LHn4qMuz7cvADVfu6MjD9F7+sWPdwc
+        OoIUNBaNxBCDjz/H4psDbOxl4Cat4Bf/8XDzAmzCSURj0UgMMfj4c1yrGM4imnUIZ/HXMf7YAm7ehKo/
+        6UwiiKWjWa9wSAgRCn0Xzef+AZQPP8cimHUIx30DYDwe3MAJtcIJ+nZzgGrhNL+zuX2eVDQYwWMIJdHU
+        Dud+f/w5cHPWIBwdzXg8uIkTaoQT/O80AaqE437RuY4gRcVoKoTT/J5picZpRx/P/50BAi+qHryOgBgM
+        zBtveeex4EbFcN9yLvWtZzJ00Y2cPKZ1gZHn6iLJMTV29vgUff0kHkfH/bSzxkc/LuzaWzacAxdCrE04
+        +FhzmLE70eHY4+76XFPDZ49P0ddPwpjH6GDCxs9NX3sg0dhw/u5CiEWj0cPXxwgajhp4LRcqHHLeyoaj
+        rw2CMY/RwUyPP8dDFo7wggg1GE6gtQyHBZDKDN4JDoec5441x3NNDd8+PsReFwwhjFlONKL7fdI2nEcS
+        Qqyi4ZCB15IcDht/DjV4jQXB2PPcn7vjuabGrx8fw64NghjGLCca7zd62nDEIXhhTLEhxFqncKr8W42K
+        QOuGTx7T7Hnuzwu46fJYDjpmhUViseuCtYEM4UMPFxbczalw9sALY4oNIVYXDhl3CS4Q6/wc3JxAVf6t
+        BuNkdBxj9Pn6+u5H/eWxHHTMCgvFYtcFM6FYfOjhpsO5o6MZCkc8AS+OMSyGc9NhbcLhbCBD9Pnn1y+i
+        2YQTYDycpzaasXCECmMKXtwcauRFyS8LfIWPzzuOGxGLjL0U9m1ky327WfPOYWOP0AU2NHh2XHMDH3uM
+        MgGEqv/1jPbn2HC+huYzD49Fww3I4Q27oIsajgxen2NCiFUtnC6QISqGGMsLp/lVUAwLRvsKnvJYHLz4
+        ubxhF7QJJ8gmHGowGsFise4gEBIPXvRSvGEX1PvdzgI3LBYZfAkuBC8CwkaztHDcwO1xi53njo1SMcSo
+        H073EwJDWCg9COV28Wi8MVeSEY77oc0q335uhYbTnG+OuYCaiDIVD8f9eZKKIUbdcA5ZKBYNxUIsYh9e
+        0ghieUOuKDEcHU2NcLzPICHhEFXDsQN3x4fY8/S1o1QMMeqF81cWCUNDsdpwxHUM/0EvhFjekMvrvt28
+        guHYaFYuHDZwF8QQfZ6+bpKKYYT+TwS8/0ygXEDyf5J7nQUyhIZinYez7XzTRZDCG3J5m3Di/MzD6f3j
+        Zog2jndb/WgExs58DA+BxzHEG3EtuCkxSv+0s0WGn0NHExSOHXosOnrFvR/2WMMPIYiLosxnFOY/8BmL
+        IkQbx3A0AoMfsweHwEOx6NBLw82KUTMaQcafykazMuGMntfGEKNeOK/hHmw1SBQhaCgWBh/iLzD+9Q8d
+        eQ24WTE24YyjMSiT57QxxCgfzjO4BYtgVigc7QDOYH3CYYMvhQQQiwXj0Fg0G0IsGkOMNoYYZcJ5A0fg
+        x6KRKELQUHw0jBg34R4feC24WTHY2EsiIcRgsWg0Fo3FEIPGEKoNIVZ6NPIdstvAQ7FIFCFIKM52x4QQ
+        7/Vl5w/wCdyAW/ANPIInrcdl7MR5tV3N7BQfzyneRwbEMQpxjHuxO+wE74Md1+ScaFfyHOP99h225O27
+        8CXcgGvwe+BxjCFRTJtv/R9W7yZm4r8pEwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEBLAEsAAD/2wBDAAMCAgMCAgMDAwMEAwMEBQgFBQQEBQoHBwYIDAoMDAsKCwsN
