--- a/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/Properties/Resources.resx
+++ b/Alegria-Embotellada/AlegriaEmbotelladaWinFromApp/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="fondo(madera21)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fondo(madera21).jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="gif 2 00_00_00-00_00_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gif 2 00_00_00-00_00_10.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
